test/files/neg/xml-ns-empty.scala
object foo {
  val n = 
    <a xmlns=""/>
  n.namespace == null
}
