test/files/neg/xml-ns-empty.check
xml-ns-empty.scala:3: error: To compile XML syntax, the scala.xml package must be on the classpath.
Please see https://github.com/scala/scala-xml for details.
    <a xmlns=""/>
    ^
1 error
